infra/standalone/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: udb
  labels:
    app.kubernetes.io/part-of: udb
