infra/standalone/k8s/voyant-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voyant
  labels:
    app.kubernetes.io/part-of: voyant
